--- a/src/components/pages/home/nav/NavBar.css
+++ b/src/components/pages/home/nav/NavBar.css
@@ -1,9 +1,11 @@
 .navBar {
     display: grid;
-    grid-template-columns: 1fr 9fr 1.5fr;
+    grid-template-columns: 1fr 7fr 1.5fr;
     grid-template-rows: 1fr;
+    
 }
 
 .navBarDivider {
+    border: 1px solid #000;
     
 }
