--- a/src/components/pages/home/nav/NavBar.css
+++ b/src/components/pages/home/nav/NavBar.css
@@ -1,11 +1,12 @@
 .navBar {
+    /* hv is a unit of measurement that is equal to 1% of the viewport height. */
+
     display: grid;
-    grid-template-columns: 1fr 7fr 1.5fr;
+    grid-template-columns: 1fr 7fr 1fr;
     grid-template-rows: 1fr;
     
 }
 
 .navBarDivider {
-    border: 1px solid #000;
-    
+    border: 2px solid #000;
 }
