--- a/src/components/layout/nav/NavBar.css
+++ b/src/components/layout/nav/NavBar.css
@@ -50,11 +50,11 @@
     justify-content: center;
     align-items: center;
 
-    background-color: aquamarine;
+    background-color: var(--background-color);
     border-bottom: inherit;
 }
 
 #menu {
-    background-image: url("../../../assets/icons/arrow-down-right-circle.svg");
+    background-image: url("../../../assets/icons/list.svg");
     background-size: cover;
 }
