--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@
   --font-weight: 600;
 
   --font-family: Inter, Arial, sans-serif;
+  --font-1: Valkyrie B;
+  --font-2: Inter, Arial, sans-serif;
+  --font-3: Valkyrie D;
 
   --background-color: rgb(255, 255, 255);
   --background-color-hover: rgb(209, 213, 219);
