--- a/src/components/pages/content_page/PageSubtitle.css
+++ b/src/components/pages/content_page/PageSubtitle.css
@@ -8,7 +8,7 @@
 }
 
 .pageSubheading__line {
-    height: 30px;
+    height: 15px;
     border-bottom: 1px solid #000; 
 
 }
@@ -16,8 +16,11 @@
 .pageSubheading__text {
     font-family: var(--font-1);
     font-size: 16px;
-    height: 10px;
+    height: 20px;
     padding-left: 15px;
     padding-right: 15px;
+
+    margin-top: 5px;
+    margin-bottom: 5px;
 
 }
