--- a/src/components/pages/content_page/PageTitle.css
+++ b/src/components/pages/content_page/PageTitle.css
@@ -1,6 +1,6 @@
 .pageTitle {
     font-family: var(--font-1);
-    font-size: 32px;
+    font-size: var(--font-size-2);
 
     text-align: center;
     margin-top: 10px;
