--- a/src/components/pages/home/HomePage.css
+++ b/src/components/pages/home/HomePage.css
@@ -14,6 +14,20 @@ padding-left: 32px;
 padding-right: 32px;
 
 }
+/*
+@media (min-width: 640px) {
+  body {
+  grid-template-columns: 1fr 1.618fr;
+  grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
+  grid-template-areas:
+  "header"
+  "main"
+  "aside"
+  "nav"
+  "footer";
+  }
+
+*/
 
 #action-section {
 padding: 16px;
@@ -46,3 +60,4 @@ box-shadow: none;
 outline: none;
 
 }
+
