--- a/src/components/pages/home/content_box/ContentBoxItem.css
+++ b/src/components/pages/home/content_box/ContentBoxItem.css
@@ -1,12 +1,15 @@
 
 .contentBox__item {
+    background-color: var(--background-color);
     display: flex;
     flex-direction: row;
 
     height: 44px;
-    width: 100%;
+    width: fill-available;
 
     padding: 8px 16px 16px 8px;
+
+    border-radius: 24px;
 
     border-top: none;
     border-left: none;
@@ -18,6 +21,9 @@
 
 }
 
+.contentBox__item:hover {
+    background-color: var(--background-color-hover);
+}
 
 .contentBox__item h3 {
     text-transform: capitalize;
