--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,6 @@
   --primary-complementary-color: #718096;
   --secondary-complementary-color: #e2e8f0;
   --tertiary-complementary-color: #a0aec0;
-
-  --background-color: white;
   
   --accent-color: #e53e3e;
   --accent-color-hover: #c53030;
@@ -17,6 +15,9 @@
   --text-color: #fff;
   --text-color-hover: #fff;
   --text-color-pressed: #fff;
+
+  --font-color-1: black;
+  --font-color-2: white;
 
   --font-size-1: 48px;
   --font-size-2: 32px;
@@ -32,7 +33,7 @@
   --font-2: "Suisse Works";
   --font-3: Valkyrie D;
 
-  --background-color: rgb(255, 255, 255);
+  --background-color: white; 
   --background-color-hover: rgb(209, 213, 219);
   --background-color-pressed: #fff;
 
