--- a/src/components/layout/nav/NavBar.css
+++ b/src/components/layout/nav/NavBar.css
@@ -29,7 +29,7 @@
 }
 
 .navBar__Title {
-    background-color: white;
+    background-color: var(--background-color);
     border-bottom: inherit;
 
     justify-content: left;
