--- a/src/components/pages/home/HomePage.css
+++ b/src/components/pages/home/HomePage.css
@@ -19,26 +19,71 @@ padding-right: 32px;
 
 }
 /*
+Desktop Layout >640px width
+*/
+
+
 @media (min-width: 640px) {
-  body {
-  grid-template-columns: 1fr 1.618fr;
-  grid-template-rows: 1fr 1fr 3fr 1fr 1fr;
-  grid-template-areas:
-  "header"
-  "main"
-  "aside"
-  "nav"
-  "footer";
+  #home-main {
+    padding-top: 11vh;
+
+    padding-left: 32px;
+    padding-right: 32px;
+
+
+    display: grid;
+    grid-template-columns: 1fr 1.618fr;
+    grid-template-rows: 1fr auto;
+    grid-template-areas: 
+      "null responsive-2"
+      "null responsive-2";
+    
+
+    
+  .actionArea {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: auto auto auto auto auto;
+    
+    grid-template-areas: 
+        "podcast"
+        "buy"
+        "read"
+        "download"
+        "content-page";
+    
+    grid-gap: 5px;
+    }
   }
 
-*/
+  #responsive-1 {
+    display: flex;
+    flex-direction: column;
+
+    position: fixed;
+    top: 11vh; /* Adjust the top value as needed */
+    left: 0; /* Positions the sidebar on the right edge */
+
+    width: 36%;
+    height: fill-available;
+  }
+
+  #responsive-2 {
+    grid-area: responsive-2;
+  }
+
+
+}
+
+
 
 #action-section {
 padding: 16px;
+grid-gap: 10px;
 
 display: grid;
 grid-template-columns: 1fr;
-grid-template-rows: 1.6fr 1fr;
+grid-template-rows: auto auto;
 }
 
 
